DAOS-7157 test: datamover refactor
Test-tag: pr datamover

- Simplified some function documentation.
- Added base class for mpifileutils commands.
- Added generic set_params function for all mfu commands.
- Removed old compatibility support for DcpCommand.
- Fix some incorrect test tags
- Tag dfuse tests

Signed-off-by: Dalton Bohning <daltonx.bohning@intel.com>

--- a/src/tests/ftest/datamover/dm_large_file.yaml
+++ b/src/tests/ftest/datamover/dm_large_file.yaml
@@ -47,6 +47,7 @@ ior:
       dfs_oclass: "SX"
 dfuse:
   mount_dir: "/tmp/daos_dfuse/"
+  disable_caching: True
 dcp:
   bufsize: "64MB"
   chunksize: "128MB"
