DAOS-6799 build: Enable separate builds for DAOS components
Right now, there is just client, server, and test but we can
potentially extend this to a larger set of targeted builds.

It adds some dummy targets (server, client, and test) which
are checked at runtime to limit the set of things we add
to the build.

For example
scons client -j24
scons client install -j24

Will just build and install client components

This is basically a functioning proof of concept

Fixes DAOS-6864.  This was caused by linking libdaos.so into
the daos_engine.  This library depends on libdaos_common.so
but the engine already links the pmem enabled equivalent.

Rather than link libdaos.so from the engine, I've modified
the build to link in the relevant files instead so there
is no longer a dependence on libdaos.so from daos_engine.

TODO: We may be able to clean up the rpms a bit as, in theory,
libdaos_common.so should be a client only library.

Fix a few pylint issues

An xml named directory caused an exception in fix_cmocka_xml.py

Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/src/SConscript
+++ b/src/SConscript
@@ -29,7 +29,7 @@ def generate_daos_version_header(env):
 def scons():
     """Execute build"""
 
-    Import('env', 'il_env')
+    Import('env', 'il_env', 'prereqs')
 
     # For Common library (tse.h)
     env.AppendUnique(CPPPATH=[Dir('include/daos').srcnode()])
@@ -52,9 +52,10 @@ def scons():
     generate_daos_version_header(env)
     for header in HEADERS:
         env.Install(os.path.join('$PREFIX', 'include'), 'include/%s' % header)
-    for header in HEADERS_SRV:
-        env.Install(os.path.join('$PREFIX', 'include', 'daos_srv'),
-                    'include/daos_srv/%s' % header)
+    if prereqs.server_requested():
+        for header in HEADERS_SRV:
+            env.Install(os.path.join('$PREFIX', 'include', 'daos_srv'),
+                        'include/daos_srv/%s' % header)
     for header in HEADERS_GURT:
         env.Install(os.path.join('$PREFIX', 'include', 'gurt'),
                     'include/gurt/%s' % header)
