--- a/src/control/SConscript
+++ b/src/control/SConscript
@@ -178,24 +178,32 @@ def scons():
     # Version-controlled DAOS Go source directory src/control
     gosrc = Dir('.').srcnode().abspath
 
-    prereqs.require(denv, 'ofi', 'hwloc', 'spdk')
-
+    prereqs.require(denv, 'ofi', 'hwloc')
     old_cgold = denv["ENV"].get("CGO_LDFLAGS", "")
     # Sets CGO_LDFLAGS for rpath options
     daos_build.add_rpaths(denv, "..", True, True)
+    denv.AppendENVPath("CGO_CFLAGS", denv.subst("$_CPPINCFLAGS"), sep=" ")
+    if prereqs.client_requested():
+        agentbin = install_go_bin(denv, gosrc, None, "daos_agent", "daos_agent")
+        dmgbin = install_go_bin(denv, gosrc, None, "dmg", "dmg")
+        if prereqs.test_requested():
+            drpcbin = install_go_bin(denv, gosrc, None, "drpc_test",
+                                     "hello_drpc")
+            AlwaysBuild(drpcbin)
 
-    denv.AppendENVPath("CGO_CFLAGS", denv.subst("$_CPPINCFLAGS"),
-                       sep=" ")
+        AlwaysBuild([agentbin, dmgbin])
 
-    agentbin = install_go_bin(denv, gosrc, None, "daos_agent", "daos_agent")
-    dmgbin = install_go_bin(denv, gosrc, None, "dmg", "dmg")
-    drpcbin = install_go_bin(denv, gosrc, None, "drpc_test", "hello_drpc")
+    if not prereqs.server_requested():
+        return
 
-    AlwaysBuild([agentbin, dmgbin, drpcbin])
+    senv = denv.Clone()
+    denv = senv
+    prereqs.require(denv, 'spdk')
+
+    denv.AppendENVPath("CGO_CFLAGS", denv.subst("$_CPPINCFLAGS"), sep=" ")
 
     SConscript('lib/spdk/SConscript', exports='denv')
 
-    senv = denv.Clone()
     denv.AppendUnique(LINKFLAGS=["-Wl,--no-as-needed"])
     prereqs.require(senv, 'pmdk', 'spdk', 'ofi', 'hwloc')
 
