--- a/src/client/api/SConscript
+++ b/src/client/api/SConscript
@@ -16,16 +16,19 @@ def scons():
     libdaos_tgts += dc_pool_tgts + dc_co_tgts + dc_placement_tgts + dc_obj_tgts
     libdaos_tgts += dc_mgmt_tgts + dc_array_tgts + dc_kv_tgts + dc_security_tgts
     Export('libdaos_tgts')
-    libdaos = daos_build.library(env, 'daos', libdaos_tgts,
-                                 SHLIBVERSION=API_VERSION,
-                                 LIBS=['daos_common'])
-    if hasattr(env, 'InstallVersionedLib'):
-        env.InstallVersionedLib('$PREFIX/lib64/', libdaos,
-                                SHLIBVERSION=API_VERSION)
-    else:
-        env.Install('$PREFIX/lib64/', libdaos)
 
-    SConscript('tests/SConscript', exports='denv')
+    if prereqs.client_requested():
+        libdaos= daos_build.library(env, 'daos', libdaos_tgts,
+                                     SHLIBVERSION=API_VERSION,
+                                     LIBS=['daos_common'])
+        if hasattr(env, 'InstallVersionedLib'):
+            env.InstallVersionedLib('$PREFIX/lib64/', libdaos,
+                                    SHLIBVERSION=API_VERSION)
+        else:
+            env.Install('$PREFIX/lib64/', libdaos)
+
+    if prereqs.test_requested():
+        SConscript('tests/SConscript', exports='denv')
 
 if __name__ == "SCons.Script":
     scons()
