--- a/src/dtx/SConscript
+++ b/src/dtx/SConscript
@@ -5,10 +5,14 @@ def scons():
     """Execute build"""
     Import('env', 'prereqs')
 
+    if not prereqs.server_requested():
+        return
+
     env.AppendUnique(LIBPATH=[Dir('.')])
     denv = env.Clone()
 
     prereqs.require(denv, 'argobots', 'protobufc', 'hwloc')
+    prereqs.require(denv, 'pmdk', headers_only=True)
 
     # dtx
     denv.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
