--- a/src/rdb/SConscript
+++ b/src/rdb/SConscript
@@ -5,6 +5,9 @@ def scons():
     """Execute build"""
     Import('env', 'prereqs')
 
+    if not prereqs.server_requested():
+        return
+
     # raft
     denv = env.Clone()
     denv.SetOption('warn', 'no-missing-sconscript')
@@ -27,7 +30,8 @@ def scons():
     denv.Install('$PREFIX/lib64/daos_srv', rdb)
 
     # tests
-    SConscript('tests/SConscript', exports='denv')
+    if prereqs.test_requested():
+        SConscript('tests/SConscript', exports='denv')
 
 if __name__ == "SCons.Script":
     scons()
