--- a/src/vea/SConscript
+++ b/src/vea/SConscript
@@ -5,6 +5,9 @@ def scons():
     """Execute build"""
     Import('env', 'prereqs')
 
+    if not prereqs.server_requested():
+        return
+
     env.AppendUnique(LIBPATH=[Dir('.')])
 
     denv = env.Clone()
@@ -13,7 +16,8 @@ def scons():
     denv.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
     denv.Library('vea', Glob('*.c'), LIBS=['daos_common_pmem', 'gurt'])
 
-    SConscript('tests/SConscript', exports='denv')
+    if prereqs.test_requested():
+        SConscript('tests/SConscript', exports='denv')
 
 if __name__ == "SCons.Script":
     scons()
