--- a/src/vos/SConscript
+++ b/src/vos/SConscript
@@ -16,11 +16,9 @@ def build_vos(env, standalone):
     if standalone:
         denv.Append(CPPDEFINES={'VOS_STANDALONE' : '1'})
         denv.Append(OBJPREFIX="s_")
-        offset = "../../"
         libname = 'vos'
     else:
         libname = 'vos_srv'
-        offset = "../.."
 
     files = FILES
     if GetOption("preprocess"):
@@ -52,6 +50,9 @@ def scons():
     """Execute build"""
     Import('env', 'prereqs')
 
+    if not prereqs.server_requested():
+        return
+
     env.AppendUnique(LIBPATH=[Dir('.')])
 
     denv = env.Clone()
@@ -65,7 +66,8 @@ def scons():
     build_vos(denv, True)
     build_vos_internal(denv)
 
-    SConscript('tests/SConscript', exports='denv')
+    if prereqs.test_requested():
+        SConscript('tests/SConscript', exports='denv')
     SConscript('storage_estimator/SConscript')
 
 if __name__ == "SCons.Script":
