--- a/src/tests/ftest/daos_test/daos_core_test.yaml
+++ b/src/tests/ftest/daos_test/daos_core_test.yaml
@@ -18,6 +18,8 @@ timeouts:
     test_daos_epoch: 125
     test_daos_verify_consistency: 105
     test_daos_io: 290
+    test_daos_ec_io: 450
+    test_daos_ec_obj: 300
     test_daos_object_array: 105
     test_daos_array: 106
     test_daos_kv: 105
@@ -89,6 +91,7 @@ daos_tests:
     test_daos_verify_consistency: DAOS_Verify_Consistency
     test_daos_io: DAOS_IO
     test_daos_ec_io: DAOS_EC_IO
+    test_daos_ec_obj: DAOS_EC_OBJ
     test_daos_object_array: DAOS_Object_Array
     test_daos_array: DAOS_Array
     test_daos_kv: DAOS_KV
@@ -128,6 +131,7 @@ daos_tests:
     test_daos_verify_consistency: V
     test_daos_io: i
     test_daos_ec_io: i
+    test_daos_ec_obj: I
     test_daos_object_array: A
     test_daos_array: D
     test_daos_kv: K
