--- a/src/tests/ftest/osa/osa_offline_parallel_test.yaml
+++ b/src/tests/ftest/osa/osa_offline_parallel_test.yaml
@@ -55,7 +55,7 @@ container:
   type: POSIX
   control_method: daos
   oclass: RP_2G8
-  properties: cksum:crc64,cksum_size:16384,srv_cksum:on,rf:1
+  properties: rf:1
 ior:
   clientslots:
     slots: 48
