DAOS-6211 test: Fix the YAML and ior command. Test-tag-hw-large: pr,hw,large nvme_osa
Signed-off-by: rpadma2 <ravindran.padmanabhan@intel.com>

--- a/src/tests/ftest/nvme/nvme_pool_exclude.yaml
+++ b/src/tests/ftest/nvme/nvme_pool_exclude.yaml
@@ -14,6 +14,8 @@ hosts:
 # it'll be used as one of the servers at test startup time, so use something
 # other than hosts.
 timeout: 1000
+setup:
+  start_servers_once: False
 server_config:
     engines_per_host: 2
     name: daos_server
