DAOS-7091 test: Offline reintegration (blank node) Test-tag-hw-medium: pr,hw,medium,ib2 offline_reintegration_full
Signed-off-by: rpadma2 <ravindran.padmanabhan@intel.com>

--- a/src/tests/ftest/osa/osa_offline_reintegration.yaml
+++ b/src/tests/ftest/osa/osa_offline_reintegration.yaml
@@ -6,6 +6,8 @@ hosts:
   test_clients:
     - client-D
 timeout: 800
+setup:
+  start_servers_once: False
 server_config:
   name: daos_server
   engines_per_host: 2
@@ -109,3 +111,5 @@ rebuild:
   test_with_rebuild: True
 checksum:
   test_with_checksum: False
+blank_node:
+  test_with_blank_node: True
