--- a/src/utils/SConscript
+++ b/src/utils/SConscript
@@ -4,7 +4,7 @@ Import('env')
 
 def scons():
     """Execute build"""
-    libs = ['daos', 'daos_common', 'uuid', 'dfs', 'duns', 'gurt', 'cart']
+    libs = ['daos', 'daos_common', 'uuid', 'dfs', 'duns', 'gurt', 'cart', 'dl']
 
     denv = env.Clone()
 
