DAOS-6833 rdb: Update raft for Pre-Vote
Update raft for the Pre-Vote feature. Increment the RDB RPC protocol
version to prevent mix-version engines from causing further harm.

PR-repos: raft@PR-46
Signed-off-by: Li Wei <wei.g.li@intel.com>

--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Build-Depends: debhelper (>= 10),
                libboost-dev,
                libspdk-dev,
                libipmctl-dev,
-               libraft-dev (= 0.7.3-1382.g3fa7f4e),
+               libraft-dev (= 0.7.3-1384.gd3593cb),
                python3-tabulate,
                liblz4-dev
 Standards-Version: 4.1.2
