--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -29,6 +29,7 @@ LIB_SRC = ['crt_utils.c']
 ####################################
 def build_utility_shared_obj(denv):
     """Build cart utility library"""
+    Import('prereqs')
     prereqs.require(denv, 'mercury', headers_only=True)
     cart_utils_objs  = denv.SharedObject(LIB_SRC)
     Export('cart_utils_objs')
